Upgrade dependent version

--- a/less/topTab/idea/appendNode.less
+++ b/less/topTab/idea/appendNode.less
@@ -1,21 +1,23 @@
-.append-group {
-    width: 212px;
-}
-
-.append-child-node {
-    .km-btn-icon {
-        background-position: 0 0;
+.minder-editor-container{
+    .append-group {
+        width: 212px;
     }
-}
-
-.append-sibling-node {
-    .km-btn-icon {
-        background-position: 0 -20px;
+    
+    .append-child-node {
+        .km-btn-icon {
+            background-position: 0 0;
+        }
     }
-}
-
-.append-parent-node {
-    .km-btn-icon {
-        background-position: 0 -40px;
+    
+    .append-sibling-node {
+        .km-btn-icon {
+            background-position: 0 -20px;
+        }
+    }
+    
+    .append-parent-node {
+        .km-btn-icon {
+            background-position: 0 -40px;
+        }
     }
 }
