--- a/less/topTab/idea/arrange.less
+++ b/less/topTab/idea/arrange.less
@@ -1,15 +1,17 @@
-.arrange-group {
-    width: 64px;
-}
-
-.arrange-up {
-    .km-btn-icon {
-        background-position: 0 -280px;
+.minder-editor-container{
+    .arrange-group {
+        width: 64px;
     }
-}
-
-.arrange-down {
-    .km-btn-icon {
-        background-position: 0 -300px;
+    
+    .arrange-up {
+        .km-btn-icon {
+            background-position: 0 -280px;
+        }
+    }
+    
+    .arrange-down {
+        .km-btn-icon {
+            background-position: 0 -300px;
+        }
     }
 }
