--- a/less/topTab/idea/operation.less
+++ b/less/topTab/idea/operation.less
@@ -1,15 +1,17 @@
-.operation-group {
-    width: 64px;
-}
-
-.edit-node {
-    .km-btn-icon {
-        background-position: 0 -60px;
+.minder-editor-container {
+    .operation-group {
+        width: 64px;
     }
-}
-
-.remove-node {
-    .km-btn-icon {
-        background-position: 0 -80px;
+    
+    .edit-node {
+        .km-btn-icon {
+            background-position: 0 -60px;
+        }
+    }
+    
+    .remove-node {
+        .km-btn-icon {
+            background-position: 0 -80px;
+        }
     }
 }
