--- a/less/topTab/idea/note.less
+++ b/less/topTab/idea/note.less
@@ -1,48 +1,50 @@
-.btn-group-vertical {
-    vertical-align: top;
-    margin: 5px;
-
-    &.note-btn-group {
-        border-right: 1px dashed #eee;
-        padding-right: 5px;
-    }
-
-    .note-btn, .note-btn-caption {
-        width: 40px;
-        margin: 0;
-        padding: 0;
-        border: none!important;
-        border-radius: 0!important;
-
-        &:hover {
-            background-color: @tool-hover;
+.minder-editor-container{
+    .btn-group-vertical {
+        vertical-align: top;
+        margin: 5px;
+    
+        &.note-btn-group {
+            border-right: 1px dashed #eee;
+            padding-right: 5px;
         }
-
-        &:active {
-            background-color: @tool-active;
+    
+        .note-btn, .note-btn-caption {
+            width: 40px;
+            margin: 0;
+            padding: 0;
+            border: none!important;
+            border-radius: 0!important;
+    
+            &:hover {
+                background-color: @tool-hover;
+            }
+    
+            &:active {
+                background-color: @tool-active;
+            }
+    
+            &.active {
+                box-shadow: none;
+                background-color: @tool-hover;
+            }
         }
-
-        &.active {
-            box-shadow: none;
-            background-color: @tool-hover;
+    
+        .note-btn {
+            height: 25px;
+            background: url(../image/kityminder-editor/icons.png) no-repeat center -1150px!important;
+        }
+    
+        .note-btn-caption {
+            height: 20px;
+    
+            .caption {
+                font-size: 12px;
+            }
         }
     }
-
-    .note-btn {
-        height: 25px;
-        background: url(images/icons.png) no-repeat center -1150px;
+    
+    //override bootstrap
+    .open > .dropdown-toggle.btn-default {
+        background-color: @tool-hover;
     }
-
-    .note-btn-caption {
-        height: 20px;
-
-        .caption {
-            font-size: 12px;
-        }
-    }
-}
-
-//override bootstrap
-.open > .dropdown-toggle.btn-default {
-    background-color: @tool-hover;
 }
