--- a/less/topTab/idea/undoRedo.less
+++ b/less/topTab/idea/undoRedo.less
@@ -1,15 +1,17 @@
-.do-group {
-    width: 38px;
-}
-
-.undo {
-    .km-btn-icon {
-        background-position: 0 -1240px;
+.minder-editor-container{
+    .do-group {
+        width: 38px;
     }
-}
-
-.redo {
-    .km-btn-icon {
-        background-position: 0 -1220px;
+    
+    .undo {
+        .km-btn-icon {
+            background-position: 0 -1240px;
+        }
+    }
+    
+    .redo {
+        .km-btn-icon {
+            background-position: 0 -1220px;
+        }
     }
 }
